Feature: Create Draft Shipment
- Create Shipmente aggregate root and value objects
- Create full feature slice
- Add unit tests
- Create migration file
